--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "gnuplot",
     "displayName": "Gnuplot",
     "description": "Gnuplot support for Visual Studio Code",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "publisher": "mammothb",
     "license": "SEE LICENSE IN LICENSE.md",
     "engines": {
@@ -28,7 +28,8 @@
                 ".gp",
                 ".gnuplot",
                 ".gnu",
-                ".plot"
+                ".plot",
+                ".plt"
             ],
             "configuration": "./language-configuration.json"
         }],
